--- a/README.adoc
+++ b/README.adoc
@@ -17,7 +17,7 @@ and it has great ownership semantics because the code makes it very obvious who 
 
 Some programmers prefer `shared_ptr` for everything,
 while others frown upon that and advocate that one should always use `unique_ptr` where possible,
-because of the extra overhead of ´shared_ptr` and the superior semantics of `unique_ptr`.
+because of the extra overhead of `shared_ptr` and the superior semantics of `unique_ptr`.
 
 Both of these are important points, and I tend to agree.
 
@@ -38,40 +38,40 @@ That is a lot of boilerplate code just for wanting to use `unique_ptr`.
 Interestingly, `shared_ptr` does not have this problem.
 
 You can avoid this by using a custom deleter,
-but it is a little more complicated (and the handle object size will increase by the of one pointer).
+but it is a little more complicated (and the handle object size will increase by the size of one pointer).
 This is kind of what `shared_ptr` does behind the scenes.
 
 The second, more serious issue is memory safety.
 
 Remember how `shared_ptr` ensured that the object was not destroyed until every reference to it was gone.
 `unique_ptr` has no such features,
-and any dependencies to the object from other users will use a simple pointer or reference.
-This leaves the door wide open for use-after-free errors, where the object is destroyed while such pointers or references still exist elsewhere in your object graph.
+and any dependencies to the object from other places in your object graph will use a simple pointer or reference.
+This leaves the door wide open for use-after-free errors, where the object is destroyed while such pointers or references still exist elsewhere in your object graph, and one of these is later dereferenced.
 This happens more often than one would think,
 and use-after-free is a big source of security vulnerabilities.
 
 All this makes `shared_ptr` seem more attractive than first thought, but when you think about it what it actually shows is that there is a need for third kind of smart pointer that sits between the two:
-One that has better performance than `shared_ptr`, semantics that are as good as `unique_ptr`, but the memory safety and "rule-of-zero" properties of `shared_ptr`.
+One that has better performance than `shared_ptr`, semantics that are as good as `unique_ptr`, but the memory safety and "rule of zero" advantages of `shared_ptr`.
 
 This is a library for such a smart pointer.
 
 == The class
 
 This library defines a smart pointer named `owned_ptr`.
-This is a handle object (one pointer in size) that points to a block on the heap containing the owned object, a reference count and a deleter function (to make the class "rule-of-zero" friendly).
+This is a handle object (one pointer in size) that points to a block on the heap containing the owned object, a reference count and a deleter function (to make the class "rule of zero" friendly).
 
 From this you can create `dep_ptr` instances,
 which are the handle objects used for non-owning users of the object (dependencies).
 There is also a `dep_ptr_const` which is created if the `owned_ptr` is const.
+The size of these is also one pointer, so the total overhead vs. `unique_ptr` is never more than two pointers in total regardless of how many handle objects you have.
 
-The destructor of the owned object is destroyed when the `owned_ptr` handle object is destroyed,
-but the block (which also contains the reference count) is not deleted until the last `dep_ptr(_const)` is also destroyed.
+The destructor of the owned object is called when the `owned_ptr` handle object is destroyed,
+but the block (which also contains the reference count) is not deallocated until the last `dep_ptr` is also destroyed.
 Any attempt to access the object using a dependency handle object after the `owned_ptr` was destroyed is trapped,
-which make uses of these classes safe against "use-after-free".
+which make uses of these classes safe against use-after-free.
 
 The size of the handle objects is a single pointer,
 so this is more memory efficient than `shared_ptr`.
 It is also much faster,
 as it does not use atomics for reference counting.
-
-It has much better memory safety than `unique_ptr`, and it allows "rule-of-zero" with forward declared classes.
+It has much better memory safety than `unique_ptr`, and it allows "rule of zero" with forward declared classes.
